fix: Albums with long track names now don't overflow

--- a/client/src/styles/CartCreation.css
+++ b/client/src/styles/CartCreation.css
@@ -134,8 +134,13 @@
 }
 
 .CartPreview_label_imageContainer {
-	width: 70%;
-	margin-bottom: 0.25rem;
+	max-width: 70%;
+	min-width: 0;
+	min-height: 0;
+	margin: 0 auto 0.25rem auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .CartPreview_label_title,
@@ -144,7 +149,7 @@
 }
 
 .CartPreview_label_programs {
-	padding: 1vw 3% 0 3%;
+	padding: 1vw 3% 1vw 3%;
 	display: grid;
 	grid-template: repeat(2, 1fr) / repeat(2, 1fr);
 	gap: 1vw;
